Use optimized List.of instead of Arrays.asList